# Agents

./: .env.example  README.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb
