[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "anthropic>=0.69.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "pypdf2>=3.0.1",
    "streamlit>=1.50.0",
]
